# aera02-aisia-sentiment-analysis

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
notebooks/: 0 - preprocessing.ipynb  2 - model.ipynb  3 - mlbased.ipynb  model.ipynb  params.json
src/: model.py  preprocess.py  train.py  utils.py
