[project]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Foxxy-HCMUS", email = "hoanganh6758@gmail.com"},
]
url = "https://download.pytorch.org/whl/cu116"
dependencies = [
    "rich>=13.5.2",
    "tomli>=2.0.1",
    "pyspark>=3.4.1",
    "mlflow>=2.7.0",
    "wordcloud",
    "matplotlib",
    "seaborn",
    "spacy",
    "googletrans==3.1.0a0",
    "ipywidgets",
    "pandarallel",
    "datasets",
    "bitsandbytes==0.41.2",
    "bitsandbytes-cuda116==0.26.0.post2",
    "torch==1.13.1+cu116",
    "torchaudio==0.13.1+cu116",
    "torchvision==0.14.1+cu116",
    "transformers==4.35.2",
]
requires-python = ">=3.9"
readme = "README.md"

[tool.spacy]
spacy-model = "en_core_web_sm"

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "ruff>=0.0.285",
    "pre-commit>=3.3.3",
    "mypy>=1.5.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

